plugins {
    id "java"
    id "com.dorongold.task-tree" version "1.3.1"
    id 'org.gradle.test-retry' version '1.0.0'
}

sourceCompatibility = 1.8

repositories {
    jcenter()

    // If `mavenLocal()` is placed before `jcenter()`,
    // you can see the source code for libraries in IntelliJ.
    // Why?
    mavenLocal()
}

dependencies {
    implementation platform("com.fasterxml.jackson:jackson-bom:2.10.1")
    implementation platform("io.projectreactor:reactor-bom:latest.release")
    implementation platform("org.junit:junit-bom:latest.release")

    implementation("com.fasterxml.jackson.core:jackson-databind")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-smile")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")

    implementation("io.projectreactor.netty:reactor-netty")

    implementation("com.google.guava:guava:$guavaVersion")

    implementation("org.apache.avro:avro:${avroVersion}")
    implementation("org.apache.commons:commons-lang3:${commonsLang3Version}")
    implementation("org.apache.httpcomponents:httpclient:$httpClientVersion")
    implementation("commons-io:commons-io:$commonsIoVersion")
    implementation("org.bouncycastle:bcprov-jdk15on:$bouncyCastleProviderVersion")
    implementation("org.jsoup:jsoup:$jsoupVersion")
    implementation("ch.qos.logback:logback-classic:$logbackVersion")
    implementation("org.apache.kafka:kafka-clients:${kafkaClientVersion}")
    implementation("org.hibernate:hibernate-validator:${hibernateValidatorVersion}")
    implementation("org.glassfish:javax.el:${elVersion}")
    implementation("com.github.javaparser:javaparser-core:${javaParserVersion}")
    implementation("io.netty:netty-all:${nettyVersion}")
    implementation("org.objenesis:objenesis:${objenesisVersion}")
    implementation("com.github.jknack:handlebars:${handlebarsVersion}")
    implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
    implementation("org.apache.commons:commons-pool2:${commonsPool2Version}")
    implementation("org.pcollections:pcollections:${pcollectionsVersion}")
    implementation("org.xmlunit:xmlunit-core:${xmlUnitVersion}")
    implementation("org.apache.commons:commons-math3:${commonsMath3Version}")
    implementation("org.ta4j:ta4j-core:${ta4JVersion}")
    implementation("com.opencsv:opencsv:${opencsvVersion}")
    implementation("org.python:jython-standalone:${jythonVersion}")
    implementation("commons-validator:commons-validator:${commonsValidatorVersion}")
    implementation("org.thymeleaf:thymeleaf:${thymeleafVersion}")
    implementation("org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}")
    implementation("com.google.cloud:google-cloud-monitoring:${googleCloudVersion}")
    implementation("io.github.resilience4j:resilience4j-retry:${resilience4JVersion}")

    implementation("com.blueconic:browscap-java:1.2.14")
    implementation("nl.basjes.parse.useragent:yauaa:5.15")

    compileOnly("org.projectlombok:lombok:$lombokVersion")
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")

    testImplementation("junit:junit")
    testImplementation("org.junit.jupiter:junit-jupiter-api")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testRuntimeOnly("org.junit.vintage:junit-vintage-engine")

    testImplementation("org.assertj:assertj-core:$assertJVersion")

    testImplementation("org.mockito:mockito-core:latest.release")

    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
}

wrapper {
    gradleVersion = '6.5'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation', '-parameters']
}

test {
    useJUnitPlatform()

    retry {
        maxRetries = 3
    }

    testLogging {
        showStandardStreams = true
    }

    // Use a half of CPU cores. Note that it doesn't count hyper-threading as a true processor here.
    maxParallelForks = Runtime.runtime.availableProcessors() / 4
    println "maxParallelForks: " + maxParallelForks
}

task escapeUnicodeInResourceBundles(type: Copy) {
    from 'src/test/resources/learningtest/resource_bundles/sources'
    into 'src/test/resources/learningtest/resource_bundles'
    include '**/*.properties'
    filter(org.apache.tools.ant.filters.EscapeUnicode)
}

processTestResources.dependsOn(escapeUnicodeInResourceBundles)
